syslog-ng (3.3.1-1~mhp2) unstable; urgency=low

  * Rename module packages to syslog-ng-mod-*. The new modules conflict &
    break with the old ones, hopefully leading to a straight upgrade path.
  * Support 'status' in the init script.
    Patch from Peter Eisentraut <petere@debian.org> (Closes: #644458)
  * Build-Depend on libevtlog-dev (>= 0.2.12-5~) for correct shlibs.

 --

syslog-ng (3.3.1-1~mhp1) unstable; urgency=low

  * New upstream, final version, from the 3.3.1 release tag (f6e075c).
  * Build-Depend on help2man, so that manual pages get built.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 02 Oct 2011 21:37:23 +0200

syslog-ng (3.3.0beta2-1~preview5) unstable; urgency=low

  * Update to commit e51862b from upstream.

 -- Gergely Nagy <algernon@madhouse-project.org>  Fri, 30 Sep 2011 10:40:27 +0200

syslog-ng (3.3.0beta2-1~preview4) unstable; urgency=low

  * Repackaged to be DFSG-free, by dropping the upstream man pages.

  * Do not install the ivykis manual pages anymore.
  * Update and finalize the debian/copyright file.
  * Document the packaging workflow better in debian/README.source.
  * Use dpkg triggers to restart syslog-ng when appropriate.
  * Include DFSG-free manual pages for all binaries.
  * Build with Hardening enabled.
  * Mention syslog(3) in /etc/default/syslog-ng, instead of
    <linux/kernel.h> (Closes: #608605)

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 18 Sep 2011 17:21:28 +0200

syslog-ng (3.3.0beta2-1~preview3) unstable; urgency=low

  * Update to commit 0a3d844 from upstream.

  * Apply patch that fixes BSD timestamp parsing (also from upstream).
  * Upstream memory leak fixes.
  * Move the modules to a versioned subdirectory.
  * Ease future upgrades by making libsyslog-ng-3.3.0beta2 confict with
    and provide libsyslog-ng-3.3.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 04 Sep 2011 21:14:40 +0200

syslog-ng (3.3.0beta2-1~preview2) unstable; urgency=low
